...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:checked="@{viewModel.accompaniment.equals(viewModel.menuItems[`bread`])}"
                    android:onClick="@{()->viewModel.setAccompaniment(`bread`)}"
                    android:text='@{viewModel.menuItems["bread"].name}'
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bread_description" />

                <!--set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/berries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:checked="@{viewModel.accompaniment.equals(viewModel.menuItems[`berries`])}"
                    android:onClick="@{()->viewModel.setAccompaniment(`berries`)}"
                    android:text='@{viewModel.menuItems["berries"].name}'
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soup_description" />

                <!-- set the RadioButton text to the accompaniment name using the view model -->
                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/pickles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:checked="@{viewModel.accompaniment.equals(viewModel.menuItems[`pickles`])}"
                    android:onClick="@{()->viewModel.setAccompaniment(`pickles`)}"
                    android:text='@{viewModel.menuItems["pickles"].name}'
...
